k8s/app-virtual-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: app-virtual-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/app-virtual-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/app-virtual-network: "true"
